--- a/src/Style/TodoItem.css
+++ b/src/Style/TodoItem.css
@@ -12,6 +12,8 @@
 }
 
 .TodoItem-active {
+  background-color: #28a745;
+  color: #fff;
   border: 1px solid #28a745;
 }
 
@@ -48,6 +50,6 @@
   color: #fff;
   position: absolute;
   right: -24px;
-  bottom: 30px;
+  bottom: 35px;
   border: none;
 }
