--- a/src/Style/TodoList.css
+++ b/src/Style/TodoList.css
@@ -1,4 +1,23 @@
 .TodoList {
+  height: 200px;
   margin: 0;
-  padding: 0;
+  padding: 10px 30px;
+  overflow-y: scroll;
+  overflow-x: none;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: darkgrey;
+  /* outline: 1px solid slategrey; */
 }
